syntax = "proto3";

package ai.verta.modeldb;
option go_package = "github.com/VertaAI/modeldb/protos/gen/go/protos/public/modeldb";

option java_multiple_files = true;

import "protos/public/common/CommonService.proto";
import "protos/public/modeldb/CommonService.proto";
import "google/api/annotations.proto";

message JobStatusEnum {
    enum JobStatus {
        NOT_STARTED = 0;
        IN_PROGRESS = 1;
        COMPLETED = 2;
    }
}

message JobTypeEnum {
    enum JobType {
        KUBERNETES_JOB = 0;
    }
}

message Job {
    string id = 1;
    string description = 2;
    string start_time = 3;
    string end_time = 4;
    repeated common.KeyValue metadata  = 5;
    JobStatusEnum.JobStatus job_status = 6;
    JobTypeEnum.JobType job_type = 7;
    string owner = 8;
}

message CreateJob {
    string description = 1;
    string start_time = 2;
    string end_time = 3;
    repeated common.KeyValue metadata  = 4;
    JobStatusEnum.JobStatus job_status = 5;
    JobTypeEnum.JobType job_type = 6;

    message Response {
        Job job = 1;
    }
}

message UpdateJob {
    string id = 1;
    string end_time = 3;
    JobStatusEnum.JobStatus job_status = 2;

    message Response {
        Job job = 1;
    }
}

message DeleteJob {
    string id = 1;

    message Response {
        bool status = 1;
    }
}

message GetJob {
    string id = 1;

    message Response {
        Job job = 1;
    }
}

service JobService {

    rpc createJob (CreateJob) returns (CreateJob.Response){
        option (google.api.http) = {
            post: "/v1/job/createJob"
            body: "*"
        };
    };

    rpc getJob (GetJob) returns (GetJob.Response){
        option (google.api.http) = {
            get: "/v1/job/getJob"
        };
    };

    rpc updateJob (UpdateJob) returns (UpdateJob.Response){
        option (google.api.http) = {
            get: "/v1/job/updateJob"
        };
    };

    rpc deleteJob (DeleteJob) returns (DeleteJob.Response){
        option (google.api.http) = {
            get: "/v1/job/deleteJob"
        };
    };
}
